--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="title_favorites">Favoritos</string>
     <string name="title_popular">Populares</string>
     <string name="title_non_favorites">No favoritos</string>
+    <string name="accept">Aceptar</string>
+    <string name="cancel">Cancelar</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
