--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MoviesApp</string>
+    <string name="app">MoviesApp</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
@@ -8,6 +9,11 @@
     <string name="title_non_favorites">No favoritos</string>
     <string name="accept">Aceptar</string>
     <string name="cancel">Cancelar</string>
+    <string name="empty">No se ha encontrado informacion</string>
+    <string name="empty_favorites">No se ha agregado a favoritos</string>
+    <string name="empty_non_favorites">No se ha agregado a no favoritos</string>
+    <string name="try_again">Intentar de nuevo</string>
+    <string name="no_connection">Sin conexion</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
