--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,9 @@
 <resources>
-    <string name="app_name">MoviesApp</string>
-    <string name="app">MoviesApp</string>
+    <string name="app_name" translatable="false">MoviesApp</string>
+    <string name="app" translatable="false">MoviesApp</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="title_favorites">Favoritos</string>
     <string name="title_popular">Populares</string>
+    <string name="title_favorites">Favoritos</string>
     <string name="title_non_favorites">No favoritos</string>
     <string name="accept">Aceptar</string>
     <string name="cancel">Cancelar</string>
@@ -14,6 +12,5 @@
     <string name="empty_non_favorites">No se ha agregado a no favoritos</string>
     <string name="try_again">Intentar de nuevo</string>
     <string name="no_connection">Sin conexion</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="choose_language">Elige un idioma</string>
 </resources>
